--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "contract": "yarn workspace contract",
     "client": "yarn workspace client",
     "test": "yarn workspace contract test"
+  },
+  "dependencies": {
+    "hardhat": "^2.19.1"
   }
 }
