--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "test": "npx hardhat test"
+    "test": "npx hardhat test"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "1.0.6",
@@ -15,7 +15,7 @@
     "@typechain/hardhat": "6.1.5",
     "chai": "4.3.7",
     "ethers": "5.4",
-    "hardhat": "2.18.1",
+    "hardhat": "^2.19.1",
     "hardhat-gas-reporter": "1.0.9",
     "solidity-coverage": "0.8.2",
     "typechain": "8.1.1"
